--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,40 @@
 
   <name>erCep</name>
 
+  <repositories>
+    <repository>
+      <id>kelp_repo_snap</id>
+      <name>KeLP Snapshots repository</name>
+      <releases>
+        <enabled>false</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>fail</checksumPolicy>
+      </snapshots>
+      <url>http://sag.art.uniroma2.it:8081/artifactory/kelp-snapshot/</url>
+    </repository>
+    <repository>
+      <id>kelp_repo_release</id>
+      <name>KeLP Stable repository</name>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>fail</checksumPolicy>
+      </snapshots>
+      <url>http://sag.art.uniroma2.it:8081/artifactory/kelp-release/</url>
+    </repository>
+  </repositories>
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
@@ -22,6 +56,45 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+
+
+    <dependency>
+      <groupId>com.espertech</groupId>
+      <artifactId>esper</artifactId>
+      <version>7.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.espertech</groupId>
+      <artifactId>esperio-csv</artifactId>
+      <version>7.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>net.jkernelmachines</groupId>
+      <artifactId>jkernelmachines</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>nz.ac.waikato.cms.weka</groupId>
+      <artifactId>weka-dev</artifactId>
+      <version>3.9.3</version>
+    </dependency>
+    <dependency>
+      <groupId>nz.ac.waikato.cms.weka</groupId>
+      <artifactId>XMeans</artifactId>
+      <version>1.0.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>it.uniroma2.sag.kelp</groupId>
+      <artifactId>kelp-full</artifactId>
+      <version>2.2.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.ejml</groupId>
+      <artifactId>ejml-core</artifactId>
+      <version>0.35</version>
     </dependency>
   </dependencies>
 
